// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-document-blueprint should handle moving non-existent blueprint 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-document-blueprint should handle moving to non-existent folder 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;

exports[`move-document-blueprint should move a document blueprint 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
